k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-app
  labels:
    app: incident-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: incident-app
  template: # template for the pods
    metadata:
      labels:
        app: incident-app
    spec:
      containers:
      - name: incident-app
        image: "quay.io/uswitch/incident:latest"
        ports:
          - containerPort: 9292

        volumeMounts:
        - name: incident-slack-project
          mountPath: /tmp/incident-slack-project.json
          subPath: incident-slack-project.json

        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp /tmp/incident-slack-project.json /usr/src/app/incident-slack-project.json"]
        readinessProbe:
          httpGet:
            path: /healthz
            port: 9292
          initialDelaySeconds: 3
          periodSeconds: 5

      volumes:
      - name: incident-slack-project
        secret:
          secretName: incident-slack-project
          items:
            - key: incident-slack-project
              path: incident-slack-project.json
