k8s/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: external
  name: incident-app
spec:
  rules:
  - host: <app-url>
    http:
      paths:
      - path: /
        backend:
          serviceName: incident-app
          servicePort: 9292
